[MODORDERS-963] - Fixed OpenCompositeOrderPieceServiceTest